--- a/index.html
+++ b/index.html
@@ -42,38 +42,52 @@
     }
 
     function renderEvents() {
-      const eventsDiv = document.getElementById('events');
-      eventsDiv.innerHTML = '';
+  const eventsDiv = document.getElementById('events');
+  eventsDiv.innerHTML = '';
 
-      events.forEach((event, eventIndex) => {
-        const eventDiv = document.createElement('div');
-        eventDiv.innerHTML = `<h2>${event.name} (${event.date})</h2>`;
-        const attendeeList = document.createElement('ul');
+  const table = document.createElement('table');
+  const headerRow = document.createElement('tr');
+  const nameHeader = document.createElement('th');
+  nameHeader.textContent = 'Name';
+  headerRow.appendChild(nameHeader);
 
-        attendees.forEach((attendee, attendeeIndex) => {
-          const attendeeItem = document.createElement('li');
-          attendeeItem.textContent = attendee;
-          const attendingCheckbox = document.createElement('input');
-          attendingCheckbox.type = 'checkbox';
-          attendingCheckbox.addEventListener('change', () => {
-            updateAttendance(eventIndex, attendeeIndex, attendingCheckbox.checked);
-          });
+  events.forEach((event) => {
+    const eventHeader = document.createElement('th');
+    eventHeader.textContent = `${event.name} (${event.date})`;
+    headerRow.appendChild(eventHeader);
+  });
 
-          const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
-          eventRef.on('value', (snapshot) => {
-            attendingCheckbox.checked = snapshot.val() || false;
-          });
+  table.appendChild(headerRow);
 
-          attendeeItem.appendChild(attendingCheckbox);
-          attendeeList.appendChild(attendeeItem);
-        });
+  attendees.forEach((attendee, attendeeIndex) => {
+    const attendeeRow = document.createElement('tr');
+    const attendeeName = document.createElement('td');
+    attendeeName.textContent = attendee;
+    attendeeRow.appendChild(attendeeName);
 
-        eventDiv.appendChild(attendeeList);
-        eventsDiv.appendChild(eventDiv);
+    events.forEach((event, eventIndex) => {
+      const attendeeEvent = document.createElement('td');
+      const attendingCheckbox = document.createElement('input');
+      attendingCheckbox.type = 'checkbox';
+      attendingCheckbox.addEventListener('change', () => {
+        updateAttendance(eventIndex, attendeeIndex, attendingCheckbox.checked);
       });
-    }
 
-    renderEvents();
+      const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
+      eventRef.on('value', (snapshot) => {
+        attendingCheckbox.checked = snapshot.val() || false;
+      });
+
+      attendeeEvent.appendChild(attendingCheckbox);
+      attendeeRow.appendChild(attendeeEvent);
+    });
+
+    table.appendChild(attendeeRow);
+  });
+
+  eventsDiv.appendChild(table);
+}
+
   </script>
 </body>
 </html>
