--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   }
 </style>
 
-
 </head>
 <body>
   <div id="events"></div>
@@ -103,7 +102,7 @@
 
   eventsDiv.appendChild(table);
 }
-
+ renderEvents();
   </script>
 </body>
 </html>
