--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
   th {
     background-color: #f2f2f2;
   }
+ .sticky {
+    position: sticky;
+    top: 0;
+    background-color: white;
+  }
+
+  /* Mobile styles */
+  @media (max-width: 767px) {
+    .event-row {
+      display: block;
+    }
+  }
+
 </style>
 
 </head>
@@ -62,44 +75,51 @@
 
   const table = document.createElement('table');
   const headerRow = document.createElement('tr');
-  const nameHeader = document.createElement('th');
-  nameHeader.textContent = 'Name';
-  headerRow.appendChild(nameHeader);
+  const nameHeader = document.createElement("th");
+nameHeader.textContent = "Name";
+nameHeader.classList.add("sticky");
+headerRow.appendChild(nameHeader);
 
-  events.forEach((event) => {
-    const eventHeader = document.createElement('th');
-    eventHeader.textContent = `${event.name} (${event.date})`;
-    headerRow.appendChild(eventHeader);
-  });
+events.forEach((event) => {
+  const eventHeader = document.createElement("th");
+  eventHeader.textContent = `${event.name} (${event.date})`;
+  eventHeader.classList.add("sticky");
+  headerRow.appendChild(eventHeader);
+});
+
 
   table.appendChild(headerRow);
 
   attendees.forEach((attendee, attendeeIndex) => {
-    const attendeeRow = document.createElement('tr');
-    const attendeeName = document.createElement('td');
-    attendeeName.textContent = attendee;
-    attendeeRow.appendChild(attendeeName);
+  const attendeeRow = document.createElement("tr");
+  const attendeeName = document.createElement("td");
+  attendeeName.textContent = attendee;
+  attendeeName.classList.add("sticky");
+  attendeeRow.appendChild(attendeeName);
+  attendeeRow.classList.add("event-row");
 
-    events.forEach((event, eventIndex) => {
-      const attendeeEvent = document.createElement('td');
-      const attendingCheckbox = document.createElement('input');
-      attendingCheckbox.type = 'checkbox';
-      attendingCheckbox.addEventListener('change', () => {
-        updateAttendance(eventIndex, attendeeIndex, attendingCheckbox.checked);
-      });
-
-      const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
-      eventRef.on('value', (snapshot) => {
-        attendingCheckbox.checked = snapshot.val() || false;
-      });
-
-      attendeeEvent.appendChild(attendingCheckbox);
-      attendeeRow.appendChild(attendeeEvent);
+  events.forEach((event, eventIndex) => {
+    const attendeeEvent = document.createElement("td");
+    const attendingCheckbox = document.createElement("input");
+    attendingCheckbox.type = "checkbox";
+    attendingCheckbox.addEventListener("change", () => {
+      updateAttendance(eventIndex, attendeeIndex, attendingCheckbox.checked);
     });
 
-    table.appendChild(attendeeRow);
+    const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
+    eventRef.on("value", (snapshot) => {
+      attendingCheckbox.checked = snapshot.val() || false;
+    });
+
+    attendeeEvent.appendChild(attendingCheckbox);
+    attendeeRow.appendChild(attendeeEvent);
   });
 
+  table.appendChild(attendeeRow);
+});
+
+
+  
   eventsDiv.appendChild(table);
 }
  renderEvents();
