--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
   font-weight: bold;
 }
 
+/* Add these styles */
+.mobile-sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1;
+}
+
+/* Add this new class */
+.event-name {
+  font-weight: bold;
+}
+
 /* Update the mobile styles */
 @media (max-width: 767px) {
   table, thead, tbody, th, td, tr {
@@ -109,62 +123,90 @@ table {
       eventRef.set(attending);
     }
 
-    function renderEvents() {
-  const eventsDiv = document.getElementById('events');
-  eventsDiv.innerHTML = '';
+   function renderEvents() {
+  const eventsDiv = document.getElementById("events");
+  eventsDiv.innerHTML = "";
 
-  const table = document.createElement('table');
-  const headerRow = document.createElement('tr');
+  const table = document.createElement("table");
+  const headerRow = document.createElement("tr");
   const nameHeader = document.createElement("th");
-nameHeader.textContent = "Name";
-nameHeader.classList.add("sticky");
-headerRow.appendChild(nameHeader);
+  nameHeader.textContent = "Name";
+  nameHeader.classList.add("sticky");
+  headerRow.appendChild(nameHeader);
 
-events.forEach((event) => {
-  const eventHeader = document.createElement("th");
-  eventHeader.textContent = `${event.name} (${event.date})`;
-  eventHeader.classList.add("sticky");
-  headerRow.appendChild(eventHeader);
-});
-
+  events.forEach((event) => {
+    const eventHeader = document.createElement("th");
+    eventHeader.textContent = `${event.name} (${event.date})`;
+    eventHeader.classList.add("sticky");
+    headerRow.appendChild(eventHeader);
+  });
 
   table.appendChild(headerRow);
 
   attendees.forEach((attendee, attendeeIndex) => {
-  const attendeeRow = document.createElement("tr");
-  const attendeeName = document.createElement("td");
-  attendeeName.textContent = attendee;
-attendeeName.setAttribute("data-label", "Name");
+    const attendeeRow = document.createElement("tr");
+    const attendeeName = document.createElement("td");
+    attendeeName.textContent = attendee;
+    attendeeName.setAttribute("data-label", "Name");
+    attendeeRow.appendChild(attendeeName);
+    attendeeRow.classList.add("event-row");
 
- 
-  attendeeRow.appendChild(attendeeName);
-  attendeeRow.classList.add("event-row");
+    events.forEach((event, eventIndex) => {
+      const attendeeEvent = document.createElement("td");
+      const attendingCheckbox = document.createElement("input");
+      attendingCheckbox.type = "checkbox";
+      attendingCheckbox.addEventListener("change", () => {
+        updateAttendance(eventIndex, attendeeIndex, attendingCheckbox.checked);
+      });
 
-  events.forEach((event, eventIndex) => {
-    const attendeeEvent = document.createElement("td");
-    const attendingCheckbox = document.createElement("input");
-    attendingCheckbox.type = "checkbox";
-    attendingCheckbox.addEventListener("change", () => {
-      updateAttendance(eventIndex, attendeeIndex, attendingCheckbox.checked);
+      const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
+      eventRef.on("value", (snapshot) => {
+        attendingCheckbox.checked = snapshot.val() || false;
+      });
+
+      attendeeEvent.appendChild(attendingCheckbox);
+      attendeeEvent.setAttribute("data-label", `${event.name} (${event.date})`);
+      attendeeRow.appendChild(attendeeEvent);
     });
 
-    const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
-    eventRef.on("value", (snapshot) => {
-      attendingCheckbox.checked = snapshot.val() || false;
-    });
-
-    attendeeEvent.appendChild(attendingCheckbox);
-    attendeeRow.appendChild(attendeeEvent);
+    table.appendChild(attendeeRow);
   });
 
-  table.appendChild(attendeeRow);
-});
-
-
-  
   eventsDiv.appendChild(table);
+
+  // Add this code to handle sticky behavior on mobile screens
+  function handleMobileSticky() {
+    const rows = document.querySelectorAll(".event-row");
+    const header = document.querySelector("thead");
+
+    if (window.innerWidth <= 767) {
+      rows.forEach((row, index) => {
+        const firstCell = row.querySelector("td:first-child");
+        const isScrolledPast = firstCell.getBoundingClientRect().top <= 0;
+
+        if (isScrolledPast) {
+          header.innerHTML = firstCell.innerHTML;
+          header.classList.add("mobile-sticky");
+        }
+
+        if (index < rows.length - 1) {
+          const nextFirstCell = rows[index + 1].querySelector("td:first-child");
+          const isNextScrolled = nextFirstCell.getBoundingClientRect().top <= 0;
+
+          if (isNextScrolled) {
+            header.innerHTML = nextFirstCell.innerHTML;
+          }
+        }
+      });
+    } else {
+      header.classList.remove("mobile-sticky");
+    }
+  }
+
+  window.addEventListener("scroll", handleMobileSticky);
+  window.addEventListener("resize", handleMobileSticky);
 }
- renderEvents();
+
   </script>
 </body>
 </html>
