--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ table {
   eventsDiv.innerHTML = "";
 
   const table = document.createElement("table");
+const thead = document.createElement("thead");
   const headerRow = document.createElement("tr");
   const nameHeader = document.createElement("th");
   nameHeader.textContent = "Name";
@@ -141,7 +142,9 @@ table {
     headerRow.appendChild(eventHeader);
   });
 
-  table.appendChild(headerRow);
+  thead.appendChild(headerRow);
+table.appendChild(thead);
+
 
   attendees.forEach((attendee, attendeeIndex) => {
     const attendeeRow = document.createElement("tr");
