--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ body {
   const database = firebaseApp.database();
 
   const events = [
-    { name: "U16 Spring Jam Sioux Falls", date: "April 22-23" },
-    { name: "USF Team Sioux Falls", date: "June 17-18" },
-    { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-    { name: "Hardknockers Rapid City", date: "July 28-29" }
-  ];
+  { name: "U16 Spring Jam Sioux Falls", date: "April 22-23", deadline: "2023-04-20 23:59" },
+  { name: "USF Team Sioux Falls", date: "June 17-18", deadline: "2023-06-15 23:59" },
+  { name: "U16 Summer Classic Sioux Falls", date: "July 21-23", deadline: "2023-07-19 23:59" },
+  { name: "Hardknockers Rapid City", date: "July 28-29", deadline: "2023-07-26 23:59" }
+];
 
   const attendees = [
     "Sabas", "Hunter", "Anaias", "Peter", "Garth", "Ryder", "Tyson", "Jamian", "Ethan", "Isaiah", "AJ", "Ty", "Justin", "Koda", "Tate", "Kashton"
@@ -70,7 +70,14 @@ body {
   }
 
   function renderEventSelection() {
-    const eventSelection = document.getElementById("event-selection");
+   const deadlineText = document.createElement("p");
+  eventSelection.appendChild(deadlineText);
+
+  select.addEventListener("change", () => {
+    renderAttendeeList(select.selectedIndex);
+    deadlineText.textContent = `Deadline: ${events[select.selectedIndex].deadline}`;
+  }); 
+const eventSelection = document.getElementById("event-selection");
     eventSelection.innerHTML = "";
 
     const select = document.createElement("select");
@@ -99,7 +106,12 @@ body {
   attendeeList.innerHTML = "";
 
   attendees.forEach((attendee, attendeeIndex) => {
-    const attendeeDiv = document.createElement("div");
+   const deadline = new Date(events[eventIndex].deadline);
+  const now = new Date();
+
+  attendees.forEach((attendee, attendeeIndex) => { 
+checkbox.disabled = now > deadline;
+const attendeeDiv = document.createElement("div");
     attendeeDiv.classList.add("attendee");
 
     const attendeeName = document.createElement("span");
