--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@ body {
       attendeeCheckbox.checked = snapshot.val() || false;
     });
 
-    attendeeCheckbox.disabled = now > deadline;
+    
 
     attendeeList.appendChild(attendeeDiv);
   });
 }
 
 
-  
+  renderEventSelection();
 
 </script>
 </body>
