--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ body {
   const database = firebaseApp.database();
 
   const events = [
-    { name: "U16 Spring Jam Sioux Falls", date: "April 22-23", deadline: "2023-04-20 23:59" },
-    { name: "USF Team Sioux Falls", date: "June 17-18", deadline: "2023-06-15 23:59" },
-    { name: "U16 Summer Classic Sioux Falls", date: "July 21-23", deadline: "2023-07-19 23:59" },
-    { name: "Hardknockers Rapid City", date: "July 28-29", deadline: "2023-07-26 23:59" }
+    { name: "U16 Spring Jam Sioux Falls", date: "April 22-23" },
+    { name: "USF Team Sioux Falls", date: "June 17-18" },
+    { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
+    { name: "Hardknockers Rapid City", date: "July 28-29" }
   ];
 
   const attendees = [
@@ -83,6 +83,7 @@ body {
     defaultOption.disabled = true;
     defaultOption.selected = true;
     select.appendChild(defaultOption);
+
     events.forEach((event, index) => {
       const option = document.createElement("option");
       option.textContent = `${event.name} (${event.date})`;
@@ -91,21 +92,11 @@ body {
     });
 
     eventSelection.appendChild(select);
-
-    const deadlineText = document.createElement("p");
-    eventSelection.appendChild(deadlineText);
-
-    select.addEventListener("change", () => {
-      deadlineText.textContent = `Deadline: ${events[select.selectedIndex].deadline}`;
-    });
   }
 
   function renderAttendeeList(eventIndex) {
   const attendeeList = document.getElementById("attendee-list");
   attendeeList.innerHTML = "";
-
-  const deadline = new Date(events[eventIndex].deadline);
-  const now = new Date();
 
   attendees.forEach((attendee, attendeeIndex) => {
     const attendeeDiv = document.createElement("div");
@@ -129,8 +120,6 @@ body {
     eventRef.on("value", (snapshot) => {
       attendeeCheckbox.checked = snapshot.val() || false;
     });
-
-    
 
     attendeeList.appendChild(attendeeDiv);
   });
