--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@ body {
   const database = firebaseApp.database();
 
   const events = [
-    { name: "U16 Spring Jam Sioux Falls", date: "April 22-23" },
-    { name: "USF Team Sioux Falls", date: "June 17-18" },
-    { name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
-    { name: "Hardknockers Rapid City", date: "July 28-29" }
+{ name: "DC Open GYM", date: "March 18, 10am" },
+    //{ name: "U16 Spring Jam Sioux Falls", date: "April 22-23" },
+    //{ name: "USF Team Sioux Falls", date: "June 17-18" },
+    //{ name: "U16 Summer Classic Sioux Falls", date: "July 21-23" },
+   // { name: "Hardknockers Rapid City", date: "July 28-29" }
   ];
 
   const attendees = [
