--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 <style>
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial, sans-serif; 
+⚡ Thunder Boys Basketball ⚡ 
 }
 
 #event-selection {
@@ -62,7 +63,7 @@ body {
   ];
 
   const attendees = [
-    "Sabas", "Hunter", "Anaias", "Peter", "Garth", "Ryder", "Tyson", "Jamian", "Ethan", "Isaiah", "AJ", "Ty", "Justin", "Koda", "Tate", "Kashton"
+    "AJ", "Anaias", "Peter", "Garth", "Ryder", "Sabas", "Hunter", "Tyson", "Tate", "Jamian", "Ethan", "Isaiah", "TyBo", "Justin", "Koda", "Kashton", "Ty", "Ephesian", "Others?"
   ];
 
   function updateAttendance(eventIndex, attendeeIndex, attending) {
