--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 </style>
 </head>
 <body>
-  <h1>⚡ Thunder Boys Basketball ⚡</h1> 
+  <h1>Thunder Boys ⚡ Basketball ⚡</h1> 
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
 <script>
