--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@ body {
 .attendee-checkbox {
   margin-left: 10px;
 }
-
+h1 {
+  text-align: center;
+}
+h2 {
+  text-align: center;
+}
 </style>
 </head>
 <body>
