--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@ body {
 h1 {
   text-align: center;
 }
-h2 {
-  text-align: center;
-}
+
 </style>
 </head>
 <body>
-  <h1>⚡ Thunder ⚡</h1>
-<h2>Basketball</h2> 
+  <h1>⚡ACDC BOYS BBALL⚡</h1>
+
   <div id="event-selection"></div>
   <div id="attendee-list"></div>
 <script>
