--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ body {
 .attendee-checkbox {
   margin-left: 10px;
 }
+h1 {
+  text-align: center;
+  font-size: calc(1rem + 2vw);
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 </style>
 </head>
