--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@ const submitButton = document.getElementById("submit-button");
         document.getElementById("blue-score").textContent = scores.blue;
       });
     </script>
+    <script>let scores = { red: 0, blue: 0 };
+    </script>
     <script>submitButton.addEventListener("click", () => {
         // TODO: Add logic to calculate total scores and update Firebase
       });
