--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@ h1 {
       updateAttendance(eventIndex, attendeeIndex, event.target.checked);
     });
     attendeeDiv.appendChild(attendeeCheckbox);
-
+    for (let i = 1; i <= 6; i++) {
+  const attendeeButton = document.createElement("button");
+  attendeeButton.classList.add("attendee-button");
+  attendeeButton.textContent = `Button ${i}`;
+  attendeeDiv.appendChild(attendeeButton);
+}
     // Load saved attendance information from Firebase
     const eventRef = database.ref(`events/${eventIndex}/${attendeeIndex}`);
     eventRef.on("value", (snapshot) => {
